added all pages

--- a/src/pages/sign-in/sign-in.html
+++ b/src/pages/sign-in/sign-in.html
@@ -25,7 +25,7 @@
           </ion-item>
 
           <ion-item no-lines text-center>
-            <button ion-button class="login" type="submit" outline block
+            <button class="custom-btn-style" ion-button type="submit" outline block
               color="light">
               Войти
             </button>
