--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -7,8 +7,9 @@
   </div>
 </ion-content>
 
-<ion-footer [ngClass]="{'right': photoTaken}">
-  <button ion-button class="take-photo" (click)="takePhoto()">
-    <img [src]="assets/icon/send.png" *ngIf="photoTaken">
+<ion-footer>
+  <button ion-button class="take-photo" (click)="takePhoto()"
+    [ngClass]="{'right': photoTaken}">
+    <img src="assets/icon/send.png" *ngIf="photoTaken">
   </button>
 </ion-footer>
