--- a/src/pages/sign-in/sign-in.html
+++ b/src/pages/sign-in/sign-in.html
@@ -32,6 +32,13 @@
               Войти
             </button>
           </ion-item>
+
+          <ion-item no-lines text-center>
+            <button class="custom-btn-style link" ion-button type="button"
+              outline block color="light" clear (click)="becomePartner()">
+              Стать партнёром
+            </button>
+          </ion-item>
         </ion-list>
       </form>
     </ion-col>
