--- a/src/pages/barcode-form/barcode-form.html
+++ b/src/pages/barcode-form/barcode-form.html
@@ -6,45 +6,45 @@
         <span *ngIf="formData.barcode" class="code">
           {{ formData.barcode }}
         </span>
-        <span *ngIf="!formData.barcode" class="code">
-          Нажмите для сканирования
+        <span *ngIf="!formData.barcode" class="code text">
+          Нажмите для сканирования штрих-кода
         </span>
       </ion-col>
     </ion-row>
     <ion-row class="form-list">
       <ion-col>
         <ion-list>
-          <ion-item [ngClass]="{'disabled': !formData.barcode}">
+          <ion-item text-wrap [ngClass]="{'disabled': !formData.barcode}">
             <ion-label>
-              <h2>Какой-то текст</h2>
-              <p>Пояснение к этому тексту</p>
+              <h2>Данные отправителя</h2>
+              <p>Проверьте контактные данные, E-Mail и номер телефона</p>
             </ion-label>
             <ion-checkbox [(ngModel)]="formData.values.value1" color="dark"
               (ionChange)="checkForm('values.value1')" item-right>
             </ion-checkbox>
           </ion-item>
-          <ion-item [ngClass]="{'disabled': !formData.barcode}">
+          <ion-item text-wrap [ngClass]="{'disabled': !formData.barcode}">
             <ion-label>
-              <h2>Какой-то текст</h2>
-              <p>Пояснение к этому тексту</p>
+              <h2>Данные получателя</h2>
+              <p>Убедитесь, что адрес указан полностью, включая индекс и сотовый номер</p>
             </ion-label>
             <ion-checkbox [(ngModel)]="formData.values.value2" color="dark"
               (ionChange)="checkForm('values.value2')" item-right>
             </ion-checkbox>
           </ion-item>
-          <ion-item [ngClass]="{'disabled': !formData.barcode}">
+          <ion-item text-wrap [ngClass]="{'disabled': !formData.barcode}">
             <ion-label>
-              <h2>Какой-то текст</h2>
-              <p>Пояснение к этому тексту</p>
+              <h2>Посылка</h2>
+              <p>Соответстувует ли коробка необходимым требованиям</p>
             </ion-label>
             <ion-checkbox [(ngModel)]="formData.values.value3" color="dark"
               (ionChange)="checkForm('values.value3')" item-right>
             </ion-checkbox>
           </ion-item>
-          <ion-item [ngClass]="{'disabled': !formData.barcode}">
+          <ion-item text-wrap [ngClass]="{'disabled': !formData.barcode}">
             <ion-label>
               <h2>Страна</h2>
-              <p>Выберите страну из списка</p>
+              <p>Укажите страну-получатель</p>
             </ion-label>
             <ion-select [(ngModel)]="formData.country"
               (ionChange)="checkForm('country')">
@@ -55,7 +55,7 @@
               <ion-option value="by">Беларусь</ion-option> -->
             </ion-select>
           </ion-item>
-          <ion-item [ngClass]="{'disabled': !formData.barcode}">
+          <ion-item text-wrap [ngClass]="{'disabled': !formData.barcode}">
             <ion-label>
               <h2>Вес</h2>
               <p>Дробное значение вводить через точку</p>
@@ -85,6 +85,6 @@
 <ion-footer text-center>
   <button class="submit" [ngClass]="{'disabled': !canSubmit}" ion-button
     (click)="sendForm()" [disabled]="!canSubmit">
-    далее
+    Сфотографировать квитанцию
   </button>
 </ion-footer>
