--- a/src/pages/barcode-form/barcode-form.html
+++ b/src/pages/barcode-form/barcode-form.html
@@ -50,8 +50,8 @@
               (ionChange)="checkForm('country')">
               <ion-option value="2">Россия</ion-option>
               <ion-option value="3">Казахстан</ion-option>
-              <!-- <ion-option value="ua">Украина</ion-option>
-              <ion-option value="kg">Киргизия</ion-option>
+              <ion-option value="9">Украина</ion-option>
+              <!-- <ion-option value="kg">Киргизия</ion-option>
               <ion-option value="by">Беларусь</ion-option> -->
             </ion-select>
           </ion-item>
